# promptogen

./: .env.example  .flake8  .gitignore  .tool-versions  LICENSE  README.md  agi_like.json  lint-fix.sh  lint.sh  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-doc.yaml  build-docs.yaml  debug.yml  deploy-docs.yaml  deploy-docs.yml  deploy-preview.yaml  deploy-preview.yml  main.yaml  release.yml  test.yaml  test.yml
docs/en/: mkdocs.yml
docs/en/docs/: contributing.md  index.md  installation.md  motivation.md  quickstart.md  tutorial.md
docs/ja/: mkdocs.yml
docs/ja/docs/: contributing.md  index.md  installation.md  language.md  motivation.md  quickstart.md  tutorial.md
docs_src/: getting_started.py  installation.py  json_encoder.py  openai_setup_example.txt  prompt_creator (code_generator).ipynb  prompt_creator (code_generator).md  prompt_creator.ipynb  prompt_creator.md  prompt_creator.py  quickstart.py  uppsercase_converter.md
docs_src/examples/: benchmark_tweet_eval_emotion_reasoning.py  function_calling.ipynb  function_calling.py  prompt_creator (code_generator).md  prompt_creator.md  uppercase_converter.py  uppsercase_converter.md
docs_src/index/: format_template.txt  format_template_ja.txt  index.py  matrix.py
docs_src/quickstart/: output.txt  quickstart.py
docs_src/usage/: usage.py
examples/: base.py  function_calling.py
examples/agi_like/: agi.py
examples/classification/: benchmark.py  dataset_loader.py  interactive.py  setup_prompt.py
examples/information_extraction/: text_condenser.py
examples/llm/: openai_util.py
examples/prompt_interceptor/: translation_interceptor.py
examples/promptcreation/: context_qa_prompt.py  context_qa_prompt_reasoning.py  language_translator.py  setup_prompt.py  task_splitter.py  text_condenser.py
examples/tweet_eval_emotion/: benchmark.py  dataset_loader.py  setup_prompt.py
promptgen/: __init__.py  dataclass.py  format_utils.py  input.py  output.py  prompt.py  prompt_formatter.py  value_formatter.py
promptgen/loader/: __init__.py  prompt_loader.py
promptgen/model/: __init__.py  dataclass.py  input_formatter.py  llm.py  output_formatter.py  prompt.py  prompt_runner.py  prompt_transformer.py  reasoning_extractor.py  value_formatter.py
promptgen/prompt_collection/: __init__.py  predefined_prompts.py  prompt_collection.py
promptgen/prompt_collection/prompts/: __init__.py  prompt_creator.py  prompt_example_creator.py  prompt_extractor.py  prompt_optimizer.py  text_categorizer.py  (+3 more)
promptgen/prompt_formatter/: __init__.py  json_formatter.py  key_value_formatter.py  prompt_formatter.py  text_formatter.py
promptgen/prompt_formatters/: json_formatter.py  key_value_formatter.py  prompt_formatter.py  text_formatter.py
promptgen/prompt_tool/: __init__.py
promptgen/prompt_transformer/: reasoning_prompt_transformer.py
promptgen/prompts/: __init__.py  categorization.py  example_creator.py  predefined_prompts.py  prompt_creator.py  prompt_example_creator.py  prompt_extractor.py  prompt_optimizer.py  python_code_generator.py  summarization.py  text_categorizer.py  text_summarizer.py
promptogen/: __init__.py  dataclass.py  input.py  output.py  prompt.py  prompt_formatter.py
promptogen/model/: __init__.py  dataclass.py  llm.py  prompt.py  prompt_interceptor.py  prompt_runner.py  prompt_transformer.py  reasoning_extractor.py  value_formatter.py
promptogen/prompt_collection/: __init__.py  predefined_prompts.py  prompt_collection.py
promptogen/prompt_formatter/: json_formatter.py  key_value_formatter.py  prompt_formatter.py  text_formatter.py
promptogen/prompt_interceptor/: translate_interceptor.py  translation_interceptor.py
promptogen/prompt_tool/: __init__.py
promptogen/prompts/: categorization.py  example_creator.py  prompt_creator.py  prompt_optimizer.py  summarization.py
scripts/: coverage.sh  doc.py  extract_version_by_commit.sh  lint-fix.sh  lint.sh  test.sh
tests/: fixtures.py  test_dataclass.py  test_input_formatter.py  test_output_formatter.py  test_prompt.py  test_prompt_collection.py  test_prompt_formatter.py  test_prompt_interceptor.py  test_prompt_runner.py  test_prompt_transformer.py  test_sample_prompt.py  test_value_formatter.py
(+75 files in other folders)
