[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptgen"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Yuki Miyake", email = "zawawahoge@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic >=1.6.2,!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "promptgen/__init__.py"

[project.urls]
Homepage = "https://github.com/zawakin/promptgen"
Documentation = "https://promptgen.zawakin.dev/"

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "pytest-cov ==4.1.0",
    "coverage[toml] >= 6.5.0,< 8.0",
    "mypy ==0.982",
    "black >=23.3.0",
    "isort >=5.0.6,<6.0.0",
    "flake8 >=3.8.4,<4.0.0",
]

doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "pygments >=2.15.1",
    "pymdown-extensions >=10.0.1",
    "mkdocs-material >=8.1.4,<9.0.0",
    "typer >=0.9.0",
    "pyyaml >=6.0",
    "openai >=0.27.7",
    "python-dotenv ==0.21.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
