[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "promptgen"
version = "0.1.0"
description = ""
authors = ["zawakin(Yuki Miyake) <zawawahoge@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
packages = [{ include = "promptgen" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3,<8.0.0"
pytest-cov = "^4.1.0"
mypy = "^0.982"
black = "^23.3.0"
isort = "^5.0.6,<6.0.0"
flake8 = "^3.8.4,<4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.1.2,<2.0.0"
pygments = "^2.11"
pymdown-extensions = "^10.0.1"
mkdocs-material = "^8.1.4,<9.0.0"
typer = "^0.9.0"
pyyaml = "^6.0"
openai = "^0.27.7"
python-dotenv = "0.21.1"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"
datasets = "^2.13.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
