[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "promptogen"
version = "0.0.0" # NOTE: This is replaced by poetry-dynamic-versioning
description = ""
authors = ["zawakin <zawawahoge@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
readme = "README.md"
packages = [{ include = "promptogen" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=2.0.3,<3"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3,<8.0.0"
pytest-cov = "^4.1.0"
mypy = "^0.982"
black = "^23.3.0"
isort = "^5.0.6,<6.0.0"
flake8 = "^3.8.4,<4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.1.2,<2.0.0"
pygments = "^2.11"
pymdown-extensions = "^10.0.1"
mkdocs-material = "^9.1.21"
mkdocs-markdownextradata-plugin = "^0.1.7,<0.3.0"
typer = "^0.9.0"
pyyaml = "^6.0"
openai = "^0.27.7"
python-dotenv = "0.21.1"
datasets = "^2.13.0"
tenacity = "^8.2.2"
colorama = "^0.4.6"
types-pyyaml = "^6.0.12.11"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
